--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ header {
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #e8491d 3px solid;
+    
 }
 
 header h1 {
@@ -71,10 +72,12 @@ header h1 {
 }
 
 /* Navigation Styles */
+      
 nav {
     background-color: #35424a;
     color: #ffffff;
     padding: 10px 0;
+    text-align: center;
 }
 
 nav ul {
